force-app/main/default/objects/Translate_English__mdt/Translate_English__mdt.object-meta.xml
<CustomObject>
    <description>Custom Field Labels in Different Languages</description>
    <label>Translate English</label>
    <pluralLabel>Translate English</pluralLabel>
</CustomObject>