force-app/main/default/objects/Translate_English__mdt/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <label>English</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>