force-app/main/default/objects/Translate_English__mdt/fields/German_Translate__c.field-meta.xml
<CustomField>
    <fullName>German_Translate__c</fullName>
    <label>German Translate</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>