force-app/main/default/objects/Translate_English__mdt/fields/Language_Selected__c.field-meta.xml
<CustomField>
    <fullName>Language_Selected__c</fullName>
    <label>Language Selected</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>