force-app/main/default/objects/Translate_English__mdt/fields/Spanish_Translate__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Translate__c</fullName>
    <label>Spanish Translate</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>